--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.0.5",
+    "@aws-amplify/ui-react-storage": "^2.1.0",
+    "@aws-sdk/client-s3": "^3.374.0",
+    "@aws-sdk/credential-providers": "^3.370.0",
+    "@aws-sdk/hash-node": "^3.374.0",
+    "@aws-sdk/protocol-http": "^3.374.0",
+    "@aws-sdk/s3-request-presigner": "^3.375.0",
+    "@aws-sdk/url-parser": "^3.374.0",
+    "@smithy/querystring-builder": "^1.0.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1420.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
@@ -21,5 +31,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "aws-amplify": "^5.3.5"
   }
 }
