--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,12 @@
 
 # dependencies
 /node_modules
+!/node_modules/aws-sdk
+!/node_modules/@aws-sdk
+!/node_modules/@aws-amplify
+!/node_modules/aws-crt
 /.pnp
-.pnp.js
+.pnp.jsgit 
 
 # testing
 /coverage
@@ -35,23 +39,23 @@ yarn-error.log*
 next-env.d.ts
 
 #amplify-do-not-edit-begin
-amplify/\#current-cloud-backend
-amplify/.config/local-*
-amplify/logs
-amplify/mock-data
-amplify/mock-api-resources
-amplify/backend/amplify-meta.json
-amplify/backend/.temp
-build/
-dist/
-node_modules/
-aws-exports.js
-awsconfiguration.json
-amplifyconfiguration.json
-amplifyconfiguration.dart
-amplify-build-config.json
-amplify-gradle-config.json
-amplifytools.xcconfig
-.secret-*
-**.sample
+# amplify/\#current-cloud-backend
+# amplify/.config/local-*
+# amplify/logs
+# amplify/mock-data
+# amplify/mock-api-resources
+# amplify/backend/amplify-meta.json
+# amplify/backend/.temp
+# build/
+# dist/
+# node_modules/
+# aws-exports.js
+# awsconfiguration.json
+# amplifyconfiguration.json
+# amplifyconfiguration.dart
+# amplify-build-config.json
+# amplify-gradle-config.json
+# amplifytools.xcconfig
+# .secret-*
+# **.sample
 #amplify-do-not-edit-end
